# SPLN2024

./: README.md
P1/: pyproject.toml
P1/data/: alteraT.py
P1/tests/: test1.md
P1/word_freq/: __init__.py
P2/: datasets.txt
P2/P2/: README.md  out_official.txt  out_or.txt  pyproject.toml  res.txt
P2/P2/data/: README.md  booster.txt  expressions.txt  lex.txt  load_data.py  negate.txt  sentiment_dict_or.txt  sentiments_used.txt
P2/P2/sent_analysis/: __init__.py
P2/P2/tests/HP/: HP1.txt  HP10.txt  HP16.txt  HP17.txt  HP6.txt  HP8.txt  HP9.txt
P2/P2/tests/Vader+LeIA/: HP10eng.txt  HP11.txt  HP11eng.txt  HP12.txt  HP12eng.txt  HP13.txt  HP13eng.txt  HP14.txt  HP14eng.txt  HP15.txt  HP15eng.txt  HP16eng.txt  HP17eng.txt  HP1eng.txt  HP2.txt  HP2eng.txt  HP3.txt  HP3eng.txt  HP4.txt  HP4eng.txt  HP5.txt  HP5eng.txt  HP6eng.txt  HP7.txt  HP7eng.txt  HP8eng.txt  HP9eng.txt  HPeng.txt  README.md  histogram.py  leia.py  leiaHP.py  outLeia.txt  outVader.txt  vaderHP.py
P2/P2/tests/tweets/: README.md  extracted_tweets.txt  get_tweet.py  test10.txt
P2/jinja2/: makepyproject.py  readme.py
TPC1/: word_freq.py
TPC3/: makepyproject.py
TPC5/: patterns.json  resTPC.py
TPC5/tests/: test1.txt  test2.txt
