
                   
[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sent_analysis"
authors = [
    {name = "Diana", email = "pg53766@alunos.uminho.pt"},
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.8"
dynamic = ["version", "description"]

dependencies = [
    "FIXME"
]

[project.scripts]
sent_analysis = "sent_analysis:main"
                   
                   
